<?xml version="1.0" encoding="utf-8"?><!--TODO: Fix the Lint warnings in the layout-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="0dp"
    android:layout_marginRight="0dp"
    android:layout_marginBottom="0dp"
    android:orientation="vertical"
    android:padding="0dp">

    <include layout="@layout/toolbar" />

    <include
        android:id="@+id/action_bar_shadow"
        layout="@layout/toolbar_action_bar_shadow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerInParent="true"
                android:background="@android:color/transparent" />

            <LinearLayout
                android:id="@+id/view_submitted_forms"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:layout_below="@id/horizontal_divider"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
...
